src/semantics/tests/snapshots/ppl__semantics__tests__multiple_initialization.error.snap
---
source: src/semantics/tests/mod.rs
expression: err
---
Error: semantics::multiple_initialization

  × field `x` initialized multiple times
   ╭─[multiple_initialization.ppl:4:9]
 3 │ 
 4 │ Point { x: 1, x: 2 }
   ·         ──┬─  ──┬─
   ·           │     ╰── repeated initialization
   ·           ╰── was firstly initialized here
   ╰────
